# tools

./: .gitignore  README.md
cargo-mapper/: mapper.py
cbor2-decomp/: README.md  cbor2-decomp.py  har-cbor2-decomp.py  pyproject.toml
codeflares/: codeflare.py
dash/: example.ini  jira-dash.ipynb
ncbi_finder/: haplotype_to_gca.py
ohnice/: README.md  config.json  oh-nice.py  pyproject.toml  start.sh
personalissues/: README.md  pyproject.toml  run-backend.sh  run.sh  setup.py
personalissues/personalissues/: __main__.py  jira.py  personal_issues.py
releasefacts/: find_ready_release_tickets.py
ssh-tools/: df-test.py  example-target.json
storyreview/: pyproject.toml
storyreview/storyreview/: __main__.py  facts.py  jira.py  story.py
streamlit/: README.md  dash.py  data.py  example.toml  pyproject.toml  start.sh
