[tool.poetry]
name = "ohnice"
version = "0.1.0"
description = "A oh! visualiser that injects useful information"
authors = ["Jon Keatley <jon@ebi.ac.uk>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
streamlit = "^1.30.0"
pandas = "^2.1.4"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
